--- a/paper/sections/section1-Introduction.tex
+++ b/paper/sections/section1-Introduction.tex
@@ -16,6 +16,8 @@
 
 如今，表格图像的结构识别依然面临诸多难题。首先，表格的多样性和复杂性对识别提出了严峻挑战。现代文档中的表格形式多样，不仅包括基本的网格结构，还可能包含合并单元格、斜线分隔符、嵌套表格等复杂形式，传统表格识别算法往往难以处理。此外，形变表格的出现进一步增加了识别难度。例如，由于扫描角度的变化或内容被拉伸、倾斜等原因，表格图像可能出现变形，导致传统识别方法无法准确提取结构信息。尤其是表格中的单元格划分和内容对齐，在图像形变或变形后容易发生偏移，这使得表格的检测和重建变得更为复杂。因此，如何高效、准确地识别和重建表格结构，已成为亟待解决的难题。
 
+如今，表格图像的结构识别依然面临诸多难题。首先，表格的多样性和复杂性对识别提出了严峻挑战。现代文档中的表格形式多样，不仅包括基本的网格结构，还可能包含合并单元格、斜线分隔符、嵌套表格等复杂形式，传统表格识别算法往往难以处理。此外，形变表格的出现进一步增加了识别难度。例如，由于扫描角度的变化或内容被拉伸、倾斜等原因，表格图像可能出现变形，导致传统识别方法无法准确提取结构信息。尤其是表格中的单元格划分和内容对齐，在图像形变或变形后容易发生偏移，这使得表格的检测和重建变得更为复杂。因此，如何高效、准确地识别和重建表格结构，已成为亟待解决的难题。
+
 \subsection{研究意义与目的}
 
 在文档存储数据的方式中，表格占据着举足轻重的地位，尤其是在财务报表、学术论文、统计分析等领域，它们不仅是信息传递的重要载体，也是数据分析的基础。因此，从图像文档中自动提取表格信息并重建其结构的过程，逐渐成为计算机视觉和图像处理领域备受关注的研究方向。这项工作的核心挑战在于如何高效且准确地从复杂的图像背景中分离出表格区域，识别表格内部的行列布局，并进一步精准提取每个单元格内的数据内容。这不仅有助于提升信息处理的自动化水平，减少人工干预所带来的误差，同时也为后续的数据分析提供了更加可靠的支持。此外，随着移动设备和数字化办公环境的普及，能够快速准确地处理各种形式存在的表格图像，对于促进跨平台的信息共享与交流也具有重要意义。
