set academic achievement format

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -126,6 +126,7 @@
 \usepackage{listings} % 配置附件代码块
 \usepackage{setspace}
 \usepackage{ragged2e} % 设置两端对齐需要的模块
+\usepackage{seqsplit} % 将长单词或者字母串断开，自动换行
 \newcommand{\sectspacemode}{\setstretch{1.5}} % 设置\section内容的行距为1.5倍
 
 \usepackage{hyperref} % 点击跳转
