--- a/paper/sections/Academic-achievement.tex
+++ b/paper/sections/Academic-achievement.tex
@@ -2,6 +2,7 @@
 
 \graphicspath{{../../images}} % 设置图片路径
 
+
 \begin{document}
 \clearpage
 \phantomsection % 手动插入锚点
@@ -9,6 +10,27 @@
 \addcontentsline{toc}{section}{攻读硕士期间发表论文及参加科研情况}
 \markboth{攻读硕士期间发表论文及参加科研情况}
 \newline
-这里写科研成果
+\noindent {\zihao{4} \textbf{攻读硕士期间发表论文及专利情况:}}
+
+\begin{enumerate}[label=\arabic*.,leftmargin=1.5em]
+    \item 这是一段非常长的示例文本，用于测试自动换行效果。当文本超过一行时，第二行的起始位置应与首行文本对齐，而不是与序号对齐。此处继续填充文字以观察排版结果。
+    \item AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+\end{enumerate}
+
+\noindent {\zihao{4} \textbf{攻读硕士期间参加科研项目情况:}}
+
+
+\begin{enumerate}[label=\arabic*.,leftmargin=1.5em]
+    \item XYYYYYYYYYYY\-YYYYYYYYYYYYYYY\-YYYYYYYYYYYYYYYYYYYYYYY\-YYY
+    \item BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
+\end{enumerate}
+
+\noindent {\zihao{4} \textbf{攻读硕士期间所获得荣誉:}}
+
+\begin{enumerate}[label=\arabic*.,leftmargin=1.5em]
+    \item \seqsplit{XYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY}
+    \item CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+\end{enumerate}
+
 
 \end{document}
