--- a/paper/ref/ref.bib
+++ b/paper/ref/ref.bib
@@ -23,10 +23,12 @@
 }
 
 @misc{b3,
-  title        = {TAL-OCR-TABLE Dataset},
-  author       = {TAL Education Group},
-  year         = {2021},
-  howpublished = {\url{https://ai.100tal.com/}}
+  title = {PRCV 2021 好未来表格识别大赛},
+  author = {好未来 AI 研究院},
+  institution = {智慧教育国家新一代人工智能开放创新平台},
+  year = {2021},
+  type = {DB/OL},
+  url = {http://2021.prcv.cn/competition_2.html},
 }
 
 
