--- a/paper/ref/ref.bib
+++ b/paper/ref/ref.bib
@@ -31,6 +31,15 @@
   url = {http://2021.prcv.cn/competition_2.html},
 }
 
+@article{soft-nms,
+  title={Soft-NMS — Improving Object Detection with One Line of Code},
+  author={Navaneeth Bodla and Bharat Singh and Rama Chellappa and Larry S. Davis},
+  journal={2017 IEEE International Conference on Computer Vision (ICCV)},
+  year={2017},
+  pages={5562-5570},
+  url={https://api.semanticscholar.org/CorpusID:15155826}
+}
+
 
 @misc{TAL-OCR-TABLE,
   title        = {TAL-OCR-TABLE Dataset},
