--- a/paper/ref/ref.bib
+++ b/paper/ref/ref.bib
@@ -40,6 +40,14 @@
   url={https://api.semanticscholar.org/CorpusID:15155826}
 }
 
+@article{solov2,
+  title={SOLOv2: Dynamic, Faster and Stronger},
+  author={Xinlong Wang and Rufeng Zhang and Tao Kong and Lei Li and Chunhua Shen},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2003.10152},
+  url={https://api.semanticscholar.org/CorpusID:214611772}
+}
 
 @misc{TAL-OCR-TABLE,
   title        = {TAL-OCR-TABLE Dataset},
