--- a/paper/sections/section2-.tex
+++ b/paper/sections/section2-.tex
@@ -28,7 +28,7 @@
 
 \subsection{表格结构映射还原}
 
-表格重组是表格识别中的一个辅助步骤\cite{soft-nms}，目的是通过物理坐标和逻辑坐标的结合，将表格中的单元格从图像中的位置恢复为规整的、标准化的表格布局。这一过程帮助系统将单元格准确排列，确保不同单元格之间的空间和结构关系正确。
+表格重组是表格识别中的一个辅助步骤\cite{soft-nms}，目的是通过物理坐标和逻辑坐标的结合，将表格中的单元格从图像中的位置恢复为规整的、标准化的表格布局。这一过程帮助系统将单元格准确排列\cite{solov2}，确保不同单元格之间的空间和结构关系正确。
 
 
 \end{document}
