--- a/paper/article.tex
+++ b/paper/article.tex
@@ -229,7 +229,7 @@
 
 \subfile{sections/section2-.tex}
 
-
+这里展示参考文献\cite{yolov7} \cite{csp} \cite{crossconv} \cite{softmax} \cite{IN}
 
 % 参考文献部分
 \clearpage
