--- a/paper/ref/ref.bib
+++ b/paper/ref/ref.bib
@@ -23,31 +23,129 @@
 }
 
 @misc{b3,
-  title = {PRCV 2021 好未来表格识别大赛},
-  author = {好未来 AI 研究院},
+  title       = {PRCV 2021 好未来表格识别大赛},
+  author      = {好未来 AI 研究院},
   institution = {智慧教育国家新一代人工智能开放创新平台},
-  year = {2021},
-  type = {DB/OL},
-  url = {http://2021.prcv.cn/competition_2.html},
+  year        = {2021},
+  type        = {DB/OL},
+  url         = {http://2021.prcv.cn/competition_2.html}
 }
 
 @article{soft-nms,
-  title={Soft-NMS — Improving Object Detection with One Line of Code},
-  author={Navaneeth Bodla and Bharat Singh and Rama Chellappa and Larry S. Davis},
-  journal={2017 IEEE International Conference on Computer Vision (ICCV)},
-  year={2017},
-  pages={5562-5570},
-  url={https://api.semanticscholar.org/CorpusID:15155826}
+  title   = {Soft-NMS — Improving Object Detection with One Line of Code},
+  author  = {Navaneeth Bodla and Bharat Singh and Rama Chellappa and Larry S. Davis},
+  journal = {2017 IEEE International Conference on Computer Vision (ICCV)},
+  year    = {2017},
+  pages   = {5562-5570},
+  url     = {https://api.semanticscholar.org/CorpusID:15155826}
 }
 
 @article{solov2,
-  title={SOLOv2: Dynamic, Faster and Stronger},
-  author={Xinlong Wang and Rufeng Zhang and Tao Kong and Lei Li and Chunhua Shen},
-  journal={ArXiv},
-  year={2020},
-  volume={abs/2003.10152},
-  url={https://api.semanticscholar.org/CorpusID:214611772}
+  title   = {SOLOv2: Dynamic, Faster and Stronger},
+  author  = {Xinlong Wang and Rufeng Zhang and Tao Kong and Lei Li and Chunhua Shen},
+  journal = {ArXiv},
+  year    = {2020},
+  volume  = {abs/2003.10152},
+  url     = {https://api.semanticscholar.org/CorpusID:214611772}
 }
+
+@inproceedings{hog,
+  title     = {Histograms of Oriented Gradients for Human Detection},
+  booktitle = {2005 {{IEEE Computer Society Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}}'05)},
+  author    = {Dalal, N. and Triggs, B.},
+  year      = {2005},
+  volume    = {1},
+  pages     = {886--893},
+  publisher = {IEEE},
+  address   = {San Diego, CA, USA},
+  doi       = {10.1109/CVPR.2005.177},
+  urldate   = {2025-02-27},
+  langid    = {english}
+}
+
+@inproceedings{vcnn,
+  author    = {Zeiler, Matthew D.
+               and Fergus, Rob},
+  editor    = {Fleet, David
+               and Pajdla, Tomas
+               and Schiele, Bernt
+               and Tuytelaars, Tinne},
+  title     = {Visualizing and Understanding Convolutional Networks},
+  booktitle = {Computer Vision -- ECCV 2014},
+  year      = {2014},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {818--833},
+  abstract  = {Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark Krizhevsky et al. [18]. However there is no clear understanding of why they perform so well, or how they might be improved. In this paper we explore both issues. We introduce a novel visualization technique that gives insight into the function of intermediate feature layers and the operation of the classifier. Used in a diagnostic role, these visualizations allow us to find model architectures that outperform Krizhevsky et al on the ImageNet classification benchmark. We also perform an ablation study to discover the performance contribution from different model layers. We show our ImageNet model generalizes well to other datasets: when the softmax classifier is retrained, it convincingly beats the current state-of-the-art results on Caltech-101 and Caltech-256 datasets.},
+  isbn      = {978-3-319-10590-1}
+}
+
+@inproceedings{yolov7,
+  author    = {Wang, Chien-Yao and Bochkovskiy, Alexey and Liao, Hong-Yuan Mark},
+  booktitle = {2023 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  title     = {YOLOv7: Trainable Bag-of-Freebies Sets New State-of-the-Art for Real-Time Object Detectors},
+  year      = {2023},
+  volume    = {},
+  number    = {},
+  pages     = {7464-7475},
+  keywords  = {Training;Computer vision;Source coding;Object detection;Detectors;Computer architecture;Real-time systems;Recognition: Categorization;detection;retrieval},
+  doi       = {10.1109/CVPR52729.2023.00721}
+}
+
+@inproceedings{csp,
+  author    = {Wang, Chien-Yao and Mark Liao, Hong-Yuan and Wu, Yueh-Hua and Chen, Ping-Yang and Hsieh, Jun-Wei and Yeh, I-Hau},
+  booktitle = {2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
+  title     = {CSPNet: A New Backbone that can Enhance Learning Capability of CNN},
+  year      = {2020},
+  volume    = {},
+  number    = {},
+  pages     = {1571-1580},
+  keywords  = {Object detection;Computer architecture;Detectors;Mathematical model;Computational modeling;Computer vision;Computer science},
+  doi       = {10.1109/CVPRW50498.2020.00203}
+}
+
+@article{crossconv,
+  title         = {Cross-{{SRN}}: Structure-Preserving Super-Resolution Network with Cross Convolution},
+  shorttitle    = {Cross-{{SRN}}},
+  author        = {Liu, Yuqing and Jia, Qi and Fan, Xin and Wang, Shanshe and Ma, Siwei and Gao, Wen},
+  year          = {2022},
+  month         = aug,
+  journal       = {IEEE Transactions on Circuits and Systems for Video Technology},
+  volume        = {32},
+  number        = {8},
+  eprint        = {2201.01458},
+  primaryclass  = {eess},
+  pages         = {4927--4939},
+  issn          = {1051-8215, 1558-2205},
+  doi           = {10.1109/TCSVT.2021.3138431},
+  urldate       = {2025-03-11},
+  archiveprefix = {arXiv},
+  langid        = {english}
+}
+
+@inproceedings{softmax,
+  author    = {Bridle, John S.},
+  editor    = {Souli{\'e}, Fran{\c{c}}oise Fogelman
+               and H{\'e}rault, Jeanny},
+  title     = {Probabilistic Interpretation of Feedforward Classification Network Outputs, with Relationships to Statistical Pattern Recognition},
+  booktitle = {Neurocomputing},
+  year      = {1990},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {227--236},
+  isbn      = {978-3-642-76153-9}
+}
+
+@article{IN,
+  title   = {Instance Normalization: The Missing Ingredient for Fast Stylization},
+  author  = {Dmitry Ulyanov and Andrea Vedaldi and Victor S. Lempitsky},
+  journal = {ArXiv},
+  year    = {2016},
+  volume  = {abs/1607.08022},
+  url     = {https://api.semanticscholar.org/CorpusID:16516553}
+}
+
+
 
 @misc{TAL-OCR-TABLE,
   title        = {TAL-OCR-TABLE Dataset},
