--- a/paper/ref/ref.bib
+++ b/paper/ref/ref.bib
@@ -1,27 +1,6 @@
 4 著录项目和著录格式
 4.1 专著
 4.1.2 著录格式
-
-@book{b1,
-  author    = {陈登原},
-  title     = {国史旧闻},
-  volume    = {1},
-  address   = {北京},
-  publisher = {中华书局},
-  year      = {2000},
-  pages     = {29}
-}
-
-@book{b2,
-  author     = {哈里森·沃尔德伦},
-  translator = {谢远涛},
-  title      = {经济数学与金融数学},
-  address    = {北京},
-  publisher  = {中国人民大学出版社},
-  year       = {2012},
-  pages      = {235--236}
-}
-
 @misc{b3,
   title       = {PRCV 2021 好未来表格识别大赛},
   author      = {好未来 AI 研究院},
@@ -30,6 +9,156 @@
   type        = {DB/OL},
   url         = {http://2021.prcv.cn/competition_2.html}
 }
+
+
+@article{tsr,
+  title   = {Deep learning for table detection and structure recognition: A survey},
+  author  = {Mahmoud M. Kasem and Abdelrahman Abdallah and Alexander Berendeyev and Ebrahem Elkady and Mahmoud Abdalla and Mohamed Mahmoud and Mohamed Hamada and Daniyar B. Nurseitov and Islam Taj-Eddin},
+  journal = {ArXiv},
+  year    = {2022},
+  volume  = {abs/2211.08469},
+  url     = {https://api.semanticscholar.org/CorpusID:253553399}
+}
+
+@inproceedings{lpgma,
+  title      = {{{LGPMA}}: Complicated Table Structure Recognition with Local and Global Pyramid Mask Alignment},
+  shorttitle = {Lgpma},
+  booktitle  = {Document {{Analysis}} and {{Recognition}} -- {{ICDAR}} 2021},
+  author     = {Qiao, Liang and Li, Zaisheng and Cheng, Zhanzhan and Zhang, Peng and Pu, Shiliang and Niu, Yi and Ren, Wenqi and Tan, Wenming and Wu, Fei},
+  editor     = {Llad{\'o}s, Josep and Lopresti, Daniel and Uchida, Seiichi},
+  year       = {2021},
+  volume     = {12821},
+  pages      = {99--114},
+  publisher  = {Springer International Publishing},
+  address    = {Cham},
+  doi        = {10.1007/978-3-030-86549-8_7},
+  urldate    = {2025-03-18},
+  isbn       = {978-3-030-86548-1 978-3-030-86549-8},
+  langid     = {english}
+}
+
+@article{cascadetabnet,
+  title      = {{{CascadeTabNet}}: An Approach for End to End Table Detection and Structure Recognition from Image-Based Documents},
+  shorttitle = {{{CascadeTabNet}}},
+  author     = {Prasad, Devashish and Gadpal, Ayan and Kapadni, Kshitij and Visave, Manish and Sultanpure, Kavita},
+  year       = {2020},
+  month      = jun,
+  journal    = {2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
+  pages      = {2439--2447},
+  publisher  = {IEEE},
+  address    = {Seattle, WA, USA},
+  doi        = {10.1109/CVPRW50498.2020.00294},
+  urldate    = {2025-03-18},
+  copyright  = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  isbn       = {9781728193601},
+  langid     = {english}
+}
+
+@inproceedings{wtw,
+  title     = {Parsing Table Structures in the Wild},
+  booktitle = {2021 {{IEEE}}/{{CVF International Conference}} on {{Computer Vision}} ({{ICCV}})},
+  author    = {Long, Rujiao and Wang, Wen and Xue, Nan and Gao, Feiyu and Yang, Zhibo and Wang, Yongpan and Xia, Gui-Song},
+  year      = {2021},
+  month     = oct,
+  pages     = {924--932},
+  publisher = {IEEE},
+  address   = {Montreal, QC, Canada},
+  doi       = {10.1109/ICCV48922.2021.00098},
+  urldate   = {2025-03-13},
+  copyright = {https://doi.org/10.15223/policy-029},
+  isbn      = {978-1-6654-2812-5},
+  langid    = {english}
+}
+
+@article{unlv,
+  title   = {An open approach towards the benchmarking of table structure recognition systems},
+  author  = { Shahab, Asif  and  Shafait, Faisal  and  Kieninger, Thomas  and  Dengel, Andreas },
+  journal = {ACM},
+  pages   = {113-120},
+  year    = {2010}
+}
+
+@inproceedings{icdar2013,
+  author    = {Karatzas, Dimosthenis and Shafait, Faisal and Uchida, Seiichi and Iwamura, Masakazu and Bigorda, Lluis Gomez i and Mestre, Sergi Robles and Mas, Joan and Mota, David Fernandez and Almazàn, Jon Almazàn and de las Heras, Lluís Pere},
+  booktitle = {2013 12th International Conference on Document Analysis and Recognition},
+  title     = {ICDAR 2013 Robust Reading Competition},
+  year      = {2013},
+  volume    = {},
+  number    = {},
+  pages     = {1484-1493},
+  doi       = {10.1109/ICDAR.2013.221}
+}
+
+@article{icdar2019,
+  title   = {ICDAR2019 Competition on Scanned Receipt OCR and Information Extraction},
+  author  = {Zheng Huang and Kai Chen and Jianhua He and Xiang Bai and Dimosthenis Karatzas and Shijian Lu and C. V. Jawahar},
+  journal = {2019 International Conference on Document Analysis and Recognition (ICDAR)},
+  year    = {2019},
+  pages   = {1516-1520},
+  url     = {https://api.semanticscholar.org/CorpusID:211026630}
+}
+
+@inproceedings{pubtablenet,
+  author    = {Zhong, Xu
+               and ShafieiBavani, Elaheh
+               and Jimeno Yepes, Antonio},
+  editor    = {Vedaldi, Andrea
+               and Bischof, Horst
+               and Brox, Thomas
+               and Frahm, Jan-Michael},
+  title     = {Image-Based Table Recognition: Data, Model, and Evaluation},
+  booktitle = {Computer Vision -- ECCV 2020},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {564--580},
+  isbn      = {978-3-030-58589-1}
+}
+
+@article{tablebank,
+  title   = {TableBank: Table Benchmark for Image-based Table Detection and Recognition},
+  author  = {Minghao Li and Lei Cui and Shaohan Huang and Furu Wei and M. Zhou and Zhoujun Li},
+  journal = {ArXiv},
+  year    = {2019},
+  volume  = {abs/1903.01949},
+  url     = {https://api.semanticscholar.org/CorpusID:67877016}
+}
+
+@article{fintabnet,
+  title   = {GFTE: Graph-based Financial Table Extraction},
+  author  = {Yiren Li and Zheng Huang and Junchi Yan and Yi Zhou and Fan Ye and Xianhui Liu},
+  journal = {ArXiv},
+  year    = {2020},
+  volume  = {abs/2003.07560},
+  url     = {https://api.semanticscholar.org/CorpusID:212737040}
+}
+
+@article{scitsr,
+  title   = {Complicated Table Structure Recognition},
+  author  = {Zewen Chi and Heyan Huang and Heng-Da Xu and Houjin Yu and Wanxuan Yin and Xian-Ling Mao},
+  journal = {ArXiv},
+  year    = {2019},
+  volume  = {abs/1908.04729},
+  url     = {https://api.semanticscholar.org/CorpusID:199552037}
+}
+
+@article{camcap,
+  title     = {Junction-based table detection in camera-captured document images},
+  author    = {Seo, Wonkyo and Koo, Hyung Il and Cho, Nam Ik},
+  journal   = {International Journal on Document Analysis and Recognition (IJDAR)},
+  volume    = {18},
+  pages     = {47--57},
+  year      = {2015},
+  publisher = {Springer}
+}
+
+@misc{tabocr,
+  title        = {TAL-OCR-TABLE Dataset},
+  author       = {TAL Education Group},
+  year         = {2021},
+  howpublished = {\url{https://ai.100tal.com/}}
+}
+
 
 @article{soft-nms,
   title   = {Soft-NMS — Improving Object Detection with One Line of Code},
@@ -40,14 +169,67 @@
   url     = {https://api.semanticscholar.org/CorpusID:15155826}
 }
 
-@article{solov2,
-  title   = {SOLOv2: Dynamic, Faster and Stronger},
-  author  = {Xinlong Wang and Rufeng Zhang and Tao Kong and Lei Li and Chunhua Shen},
-  journal = {ArXiv},
-  year    = {2020},
-  volume  = {abs/2003.10152},
-  url     = {https://api.semanticscholar.org/CorpusID:214611772}
+@article{ciou,
+  author  = {Zheng, Zhaohui and Wang, Ping and Ren, Dongwei and Liu, Wei and Ye, Rongguang and Hu, Qinghua and Zuo, Wangmeng},
+  journal = {IEEE Transactions on Cybernetics},
+  title   = {Enhancing Geometric Factors in Model Learning and Inference for Object Detection and Instance Segmentation},
+  year    = {2022},
+  volume  = {52},
+  number  = {8},
+  pages   = {8574-8586},
+  doi     = {10.1109/TCYB.2021.3095305}
 }
+
+
+@article{eiou,
+  title   = {Focal and efficient IOU loss for accurate bounding box regression},
+  journal = {Neurocomputing},
+  volume  = {506},
+  pages   = {146-157},
+  year    = {2022},
+  issn    = {0925-2312},
+  doi     = {https://doi.org/10.1016/j.neucom.2022.07.042},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0925231222009018},
+  author  = {Yi-Fan Zhang and Weiqiang Ren and Zhang Zhang and Zhen Jia and Liang Wang and Tieniu Tan}
+}
+
+@article{dice,
+  title   = {V-Net: Fully Convolutional Neural Networks for Volumetric Medical Image Segmentation},
+  author  = {Fausto Milletar{\`i} and Nassir Navab and Seyed-Ahmad Ahmadi},
+  journal = {2016 Fourth International Conference on 3D Vision (3DV)},
+  year    = {2016},
+  pages   = {565-571},
+  url     = {https://api.semanticscholar.org/CorpusID:206429151}
+}
+
+@article{mmdet3,
+  title   = {MMDetection: Open MMLab Detection Toolbox and Benchmark},
+  author  = {Kai Chen and Jiaqi Wang and Jiangmiao Pang and Yuhang Cao and Yu Xiong and Xiaoxiao Li and Shuyang Sun and Wansen Feng and Ziwei Liu and Jiarui Xu and Zheng Zhang and Dazhi Cheng and Chenchen Zhu and Tianheng Cheng and Qijie Zhao and Buyu Li and Xin Lu and Rui Zhu and Yue Wu and Kangcheng Liu and Jifeng Dai and Jingdong Wang and Jianping Shi and Wanli Ouyang and Chen Change Loy and Dahua Lin},
+  journal = {ArXiv},
+  year    = {2019},
+  volume  = {abs/1906.07155},
+  url     = {https://api.semanticscholar.org/CorpusID:189927886}
+}
+
+@misc{mra,
+  author       = {Microsoft Research Asia},
+  title        = {TorchScale: A Toolkit for Foundation Model Training},
+  year         = {2023},
+  howpublished = {\url{https://github.com/microsoft/fb.resnet.torch?tab=readme-ov-file#resnet-training-in-torch}},
+  note         = {Accessed: 2025-04-18}
+}  
+
+@inproceedings{imagenet,
+  author    = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Kai Li and Li Fei-Fei},
+  booktitle = {2009 IEEE Conference on Computer Vision and Pattern Recognition},
+  title     = {ImageNet: A large-scale hierarchical image database},
+  year      = {2009},
+  volume    = {},
+  number    = {},
+  pages     = {248-255},
+  doi       = {10.1109/CVPR.2009.5206848}
+}
+
 
 @inproceedings{hog,
   title     = {Histograms of Oriented Gradients for Human Detection},
@@ -76,20 +258,16 @@
   publisher = {Springer International Publishing},
   address   = {Cham},
   pages     = {818--833},
-  abstract  = {Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark Krizhevsky et al. [18]. However there is no clear understanding of why they perform so well, or how they might be improved. In this paper we explore both issues. We introduce a novel visualization technique that gives insight into the function of intermediate feature layers and the operation of the classifier. Used in a diagnostic role, these visualizations allow us to find model architectures that outperform Krizhevsky et al on the ImageNet classification benchmark. We also perform an ablation study to discover the performance contribution from different model layers. We show our ImageNet model generalizes well to other datasets: when the softmax classifier is retrained, it convincingly beats the current state-of-the-art results on Caltech-101 and Caltech-256 datasets.},
   isbn      = {978-3-319-10590-1}
 }
 
-@inproceedings{yolov7,
-  author    = {Wang, Chien-Yao and Bochkovskiy, Alexey and Liao, Hong-Yuan Mark},
-  booktitle = {2023 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  title     = {YOLOv7: Trainable Bag-of-Freebies Sets New State-of-the-Art for Real-Time Object Detectors},
-  year      = {2023},
-  volume    = {},
-  number    = {},
-  pages     = {7464-7475},
-  keywords  = {Training;Computer vision;Source coding;Object detection;Detectors;Computer architecture;Real-time systems;Recognition: Categorization;detection;retrieval},
-  doi       = {10.1109/CVPR52729.2023.00721}
+@article{hksp,
+  title   = {YOLO-MS: Rethinking Multi-Scale Representation Learning for Real-time Object Detection},
+  author  = {Yuming Chen and Xinbin Yuan and Ruiqi Wu and Jiabao Wang and Qibin Hou and Mingg-Ming Cheng},
+  journal = {IEEE transactions on pattern analysis and machine intelligence},
+  year    = {2023},
+  volume  = {PP},
+  url     = {https://api.semanticscholar.org/CorpusID:260775890}
 }
 
 @inproceedings{csp,
@@ -100,9 +278,201 @@
   volume    = {},
   number    = {},
   pages     = {1571-1580},
-  keywords  = {Object detection;Computer architecture;Detectors;Mathematical model;Computational modeling;Computer vision;Computer science},
   doi       = {10.1109/CVPRW50498.2020.00203}
 }
+
+@inproceedings{neckb,
+  author    = {Zhou, Daquan
+               and Hou, Qibin
+               and Chen, Yunpeng
+               and Feng, Jiashi
+               and Yan, Shuicheng},
+  editor    = {Vedaldi, Andrea
+               and Bischof, Horst
+               and Brox, Thomas
+               and Frahm, Jan-Michael},
+  title     = {Rethinking Bottleneck Structure for Efficient Mobile Network Design},
+  booktitle = {Computer Vision -- ECCV 2020},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {680--697},
+  isbn      = {978-3-030-58580-8}
+}
+
+@inproceedings{yolomask,
+  author    = {Wang, Yang and Ouyang, Zhikui and Han, Runhua and Yin, Zhijian and Yang, Zhen},
+  booktitle = {2022 IEEE 22nd International Conference on Communication Technology (ICCT)},
+  title     = {YOLOMask: Real-time Instance Segmentation With Integrating YOLOv5 and OrienMask},
+  year      = {2022},
+  volume    = {},
+  number    = {},
+  pages     = {1646-1650},
+  keywords  = {Image segmentation;Graphics processing units;Object detection;Real-time systems;Communications technology;Task analysis;Instance Segmentation;Real-time;YOLOv5;OrienMask},
+  doi       = {10.1109/ICCT56141.2022.10073387}
+}
+
+@article{pryolo,
+  title   = {PR-YOLO: Improved YOLO for fast protozoa classification and segmentation},
+  author  = {YANG, WUJIAN and CHEN, SUNYANG and CHEN, GUANLIN and SHI, QIHAO},
+  doi     = {10.21203/rs.3.rs-3199595/v1},
+  journal = {Research Square},
+  year    = {2023},
+  url     = {https://doi.org/10.21203/rs.3.rs-3199595/v1}
+}
+
+@article{yolosf,
+  author  = {Cao, Xianghong and Su, Yixuan and Geng, Xin and Wang, Yongdong},
+  journal = {IEEE Access},
+  title   = {YOLO-SF: YOLO for Fire Segmentation Detection},
+  year    = {2023},
+  volume  = {11},
+  number  = {},
+  pages   = {111079-111092},
+  doi     = {10.1109/ACCESS.2023.3322143}
+}
+
+@article{yolocore,
+  title   = {YOLO-CORE: Contour Regression for Efficient Instance Segmentation},
+  author  = { Liu, Haoliang  and  Xiong, Wei  and  Zhang, Yu },
+  journal = {机器智能研究:英文版},
+  number  = {005},
+  pages   = {020},
+  year    = {2023}
+}
+
+@article{yuseg,
+  title  = {YUSEG:Yolo and Unet is all you need for cell instance segmentation},
+  author = { Bai, Bizhe },
+  year   = {2023}
+}
+
+@article{ttisyolo,
+  author   = {{Xia}, Wenjun and {Li}, Peiqing and {Li}, Qipeng and {Yang}, Taiping and {Zhang}, Shunfeng},
+  title    = {{TTIS-YOLO: a traffic target instance segmentation paradigm for complex road scenarios}},
+  journal  = {Measurement Science and Technology},
+  keywords = {YOLO, traffic target instance segmentation, convolutional neural networks},
+  year     = 2024,
+  month    = oct,
+  volume   = {35},
+  number   = {10},
+  eid      = {105402},
+  pages    = {105402},
+  doi      = {10.1088/1361-6501/ad5b10},
+  adsurl   = {https://ui.adsabs.harvard.edu/abs/2024MeScT..35j5402X},
+  adsnote  = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{ghainst,
+  author     = {Dong, Chengang and Tang, Yuhao and Zhang, Liyan},
+  title      = {GHA-Inst: a real-time instance segmentation model utilizing YOLO detection framework},
+  year       = {2024},
+  issue_date = {Sep 2024},
+  publisher  = {Kluwer Academic Publishers},
+  address    = {USA},
+  volume     = {27},
+  number     = {6},
+  issn       = {1386-7857},
+  url        = {https://doi.org/10.1007/s10586-024-04373-y},
+  doi        = {10.1007/s10586-024-04373-y},
+  journal    = {Cluster Computing},
+  month      = mar,
+  pages      = {7401–7415},
+  numpages   = {15}
+}
+
+@inproceedings{fpn-pan,
+  author    = {Lin, Tsung-Yi and Dollár, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
+  booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  title     = {Feature Pyramid Networks for Object Detection},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {936-944},
+  doi       = {10.1109/CVPR.2017.106}
+}
+
+@article{anchorbase,
+  title   = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  author  = {Shaoqing Ren and Kaiming He and Ross B. Girshick and Jian Sun},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year    = {2015},
+  volume  = {39},
+  pages   = {1137-1149},
+  url     = {https://api.semanticscholar.org/CorpusID:10328909}
+}
+
+@article{anchorfree,
+  title   = {DenseBox: Unifying Landmark Localization with End to End Object Detection},
+  author  = {Lichao Huang and Yi Yang and Yafeng Deng and Yinan Yu},
+  journal = {ArXiv},
+  year    = {2015},
+  volume  = {abs/1509.04874},
+  url     = {https://api.semanticscholar.org/CorpusID:14710847}
+}
+
+@inproceedings{nms,
+  author    = {Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
+  booktitle = {2014 IEEE Conference on Computer Vision and Pattern Recognition},
+  title     = {Rich Feature Hierarchies for Accurate Object Detection and Semantic Segmentation},
+  year      = {2014},
+  volume    = {},
+  number    = {},
+  pages     = {580-587},
+  doi       = {10.1109/CVPR.2014.81}
+}
+
+
+@article{yolov4,
+  title   = {YOLOv4: Optimal Speed and Accuracy of Object Detection},
+  author  = {Alexey Bochkovskiy and Chien-Yao Wang and Hong-Yuan Mark Liao},
+  journal = {ArXiv},
+  year    = {2020},
+  volume  = {abs/2004.10934},
+  url     = {https://api.semanticscholar.org/CorpusID:216080778}
+}
+
+@misc{yolov5,
+  author       = {G. Jocher and others},
+  title        = {{YOLO} by Ultralytics (version 5.7.0)},
+  year         = {2022},
+  publisher    = {GitHub},
+  howpublished = {\url{https://github.com/ultralytics/yolov5}}
+}
+
+@inproceedings{yolov7,
+  author    = {Wang, Chien-Yao and Bochkovskiy, Alexey and Liao, Hong-Yuan Mark},
+  booktitle = {2023 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  title     = {YOLOv7: Trainable Bag-of-Freebies Sets New State-of-the-Art for Real-Time Object Detectors},
+  year      = {2023},
+  volume    = {},
+  number    = {},
+  pages     = {7464-7475},
+  doi       = {10.1109/CVPR52729.2023.00721}
+}
+
+@inproceedings{yolov8,
+  author    = {Varghese, Rejin and M., Sambath},
+  booktitle = {2024 International Conference on Advances in Data Engineering and Intelligent Computing Systems (ADICS)},
+  title     = {YOLOv8: A Novel Object Detection Algorithm with Enhanced Performance and Robustness},
+  year      = {2024},
+  volume    = {},
+  number    = {},
+  pages     = {1-6},
+  doi       = {10.1109/ADICS58448.2024.10533619}
+}
+
+
+@article{yolov11,
+  title   = {YOLOv11: An Overview of the Key Architectural Enhancements},
+  author  = {Rahima Khanam and Muhammad Hussain},
+  journal = {ArXiv},
+  year    = {2024},
+  volume  = {abs/2410.17725},
+  url     = {https://api.semanticscholar.org/CorpusID:273532028}
+}
+
+
 
 @article{crossconv,
   title         = {Cross-{{SRN}}: Structure-Preserving Super-Resolution Network with Cross Convolution},
@@ -121,6 +491,15 @@
   urldate       = {2025-03-11},
   archiveprefix = {arXiv},
   langid        = {english}
+}
+
+@article{cba,
+  title   = {MALUNet: A Multi-Attention and Light-weight UNet for Skin Lesion Segmentation},
+  author  = {Jiacheng Ruan and Suncheng Xiang and Mingye Xie and Ting Liu and Yuzhuo Fu},
+  journal = {2022 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  year    = {2022},
+  pages   = {1150-1156},
+  url     = {https://api.semanticscholar.org/CorpusID:253265130}
 }
 
 @inproceedings{softmax,
@@ -147,9 +526,70 @@
 
 
 
-@misc{TAL-OCR-TABLE,
-  title        = {TAL-OCR-TABLE Dataset},
-  author       = {TAL Education Group},
-  year         = {2021},
-  howpublished = {\url{https://ai.100tal.com/}}
+@article{latex-seq,
+  title   = {ReLaText: Exploiting visual relationships for arbitrary-shaped scene text detection with graph convolutional networks},
+  journal = {Pattern Recognition},
+  volume  = {111},
+  pages   = {107684},
+  year    = {2021},
+  issn    = {0031-3203},
+  doi     = {https://doi.org/10.1016/j.patcog.2020.107684},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0031320320304878},
+  author  = {Chixiang Ma and Lei Sun and Zhuoyao Zhong and Qiang Huo}
 }
+
+@inproceedings{yolact,
+  author    = {Bolya, Daniel and Zhou, Chong and Xiao, Fanyi and Lee, Yong Jae},
+  booktitle = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
+  title     = {YOLACT: Real-Time Instance Segmentation},
+  year      = {2019},
+  volume    = {},
+  number    = {},
+  pages     = {9156-9165},
+  doi       = {10.1109/ICCV.2019.00925}
+}
+
+@article{mrcnn,
+  author  = {He, Kaiming and Gkioxari, Georgia and Dollár, Piotr and Girshick, Ross},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title   = {Mask R-CNN},
+  year    = {2020},
+  volume  = {42},
+  number  = {2},
+  pages   = {386-397},
+  doi     = {10.1109/TPAMI.2018.2844175}
+}
+
+@article{cmrcnn,
+  author  = {Cai, Zhaowei and Vasconcelos, Nuno},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title   = {Cascade R-CNN: High Quality Object Detection and Instance Segmentation},
+  year    = {2021},
+  volume  = {43},
+  number  = {5},
+  pages   = {1483-1498},
+  doi     = {10.1109/TPAMI.2019.2956516}
+}
+
+
+@article{solov2,
+  title   = {SOLOv2: Dynamic, Faster and Stronger},
+  author  = {Xinlong Wang and Rufeng Zhang and Tao Kong and Lei Li and Chunhua Shen},
+  journal = {ArXiv},
+  year    = {2020},
+  volume  = {abs/2003.10152},
+  url     = {https://api.semanticscholar.org/CorpusID:214611772}
+}
+
+@inproceedings{m2f,
+  author    = {Cheng, Bowen and Misra, Ishan and Schwing, Alexander G. and Kirillov, Alexander and Girdhar, Rohit},
+  booktitle = {2022 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  title     = {Masked-attention Mask Transformer for Universal Image Segmentation},
+  year      = {2022},
+  volume    = {},
+  number    = {},
+  pages     = {1280-1289},
+  doi       = {10.1109/CVPR52688.2022.00135}
+}
+
+
