Update tex file make it can public

--- a/paper/sections/cover.tex
+++ b/paper/sections/cover.tex
@@ -60,7 +60,7 @@
     \end{center}
     \vspace{66pt}
     \begin{center}
-        {\zihao{2}{\songti \textbf{基于图像分割的细粒度变形表格结构识别}}}
+        {\zihao{2}{\songti \textbf{xxxxxxxxxxxxxxxxxxx}}}
     \end{center}
     \vspace{31.5pt}
     \begin{center}
